tests/ui/macros/issue-35450.stderr
error: expected expression, found `$`
  --> $DIR/issue-35450.rs:4:8
   |
LL |     m!($t);
   |        ^ expected expression

error: aborting due to 1 previous error

